[gd_scene load_steps=14 format=3 uid="uid://d3awdi8tg2wkq"]

[ext_resource type="Texture2D" uid="uid://crvv7xv0u4uel" path="res://assets/UI/Border.png" id="1_c1d0t"]
[ext_resource type="Script" uid="uid://cbrc2m3s2n7b1" path="res://scripts/bag_scene.gd" id="1_jech4"]
[ext_resource type="PackedScene" uid="uid://b0eovaumvtjr2" path="res://scenes/bag_item_display.tscn" id="3_jnr4o"]
[ext_resource type="Theme" uid="uid://qjlccl67t0sg" path="res://themes/main_button.tres" id="4_jnr4o"]
[ext_resource type="Texture2D" uid="uid://c7cnld4x0jvyq" path="res://assets/UI/area_label.png" id="5_lk5v8"]
[ext_resource type="FontFile" uid="uid://cx7qgymunfupm" path="res://assets/fonts/m5x7.ttf" id="6_j83nh"]

[sub_resource type="Gradient" id="Gradient_jnr4o"]
colors = PackedColorArray(0.31061712, 0.31061712, 0.3106171, 1, 0.65012825, 0.6501283, 0.65012825, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d28oq"]
gradient = SubResource("Gradient_jnr4o")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tx4g7"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
texture = ExtResource("1_c1d0t")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="Theme" id="Theme_lk5v8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lk5v8"]
bg_color = Color(0, 0.41140696, 0.3589519, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j83nh"]
bg_color = Color(9.866804e-07, 0.47153926, 0.37576118, 1)

[sub_resource type="Theme" id="Theme_asw2k"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_lk5v8")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_j83nh")

[node name="BagScene" type="Node2D"]
script = ExtResource("1_jech4")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.47397572, 0.47397572, 0.47397572, 1)
offset_left = 3.0
offset_top = 3.0
offset_right = 904.0
offset_bottom = 502.0
texture = SubResource("GradientTexture2D_d28oq")

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 908.0
offset_bottom = 511.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tx4g7")

[node name="ItemShowPanel" type="PanelContainer" parent="."]
offset_left = 201.0
offset_top = 21.0
offset_right = 891.0
offset_bottom = 495.0
theme_override_styles/panel = SubResource("StyleBoxTexture_tx4g7")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 219.0
offset_top = 96.0
offset_right = 877.0
offset_bottom = 481.0
theme = SubResource("Theme_lk5v8")
horizontal_scroll_mode = 0

[node name="BagPanel" type="HFlowContainer" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_asw2k")

[node name="BagItemDisplay" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay2" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay3" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay4" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay5" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay6" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay7" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay8" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay9" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay10" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay11" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay12" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay13" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay14" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay15" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay16" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay17" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay18" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay19" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay20" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay21" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay22" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay23" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay24" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay25" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay26" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay27" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay28" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagItemDisplay29" parent="ScrollContainer/BagPanel" instance=ExtResource("3_jnr4o")]
layout_mode = 2

[node name="BagButtons" type="VBoxContainer" parent="."]
offset_left = 19.0
offset_top = 21.0
offset_right = 193.0
offset_bottom = 237.0

[node name="WeaponsButton" type="Button" parent="BagButtons"]
layout_mode = 2
theme = ExtResource("4_jnr4o")
theme_override_font_sizes/font_size = 35
text = "Weapons"

[node name="ArmourButton" type="Button" parent="BagButtons"]
layout_mode = 2
theme = ExtResource("4_jnr4o")
theme_override_font_sizes/font_size = 35
text = "Armour"

[node name="ConsumablesButton" type="Button" parent="BagButtons"]
layout_mode = 2
theme = ExtResource("4_jnr4o")
theme_override_font_sizes/font_size = 35
text = "Consumables"

[node name="KeyItemsButton" type="Button" parent="BagButtons"]
layout_mode = 2
theme = ExtResource("4_jnr4o")
theme_override_font_sizes/font_size = 35
text = "Key Items"

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.29803923)
custom_minimum_size = Vector2(400, 0)
offset_left = 343.0
offset_top = 33.0
offset_right = 743.0
offset_bottom = 89.0
texture = ExtResource("5_lk5v8")

[node name="PanelName" type="Label" parent="TextureRect2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 8.0
offset_top = -1.0
offset_right = 408.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7411765)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource("6_j83nh")
theme_override_font_sizes/font_size = 50
text = "Panel Name"
horizontal_alignment = 1

[connection signal="pressed" from="BagButtons/WeaponsButton" to="." method="_on_weapons_button_pressed"]
[connection signal="pressed" from="BagButtons/ArmourButton" to="." method="_on_armour_button_pressed"]
[connection signal="pressed" from="BagButtons/ConsumablesButton" to="." method="_on_consumables_button_pressed"]
[connection signal="pressed" from="BagButtons/KeyItemsButton" to="." method="_on_key_items_button_pressed"]
